Changelog
---------
### 1.3.1
* __Support for amino acids as ligands__
* Bugfixes for problems affecting some structures with aromatic rings

### 1.3.0
* __Batch processing__
* Improvements to verbose mode and textual output

### 1.2.3
* __Better support for files from MD and docking software__
* __Fixes issues with large and complex structures__
* Speed optimizations


### 1.2.2
* __Option to consider alternate atom locations (e.g. for ligands with several conformations__
* Automatic fixing of missing ligand names
* Improved handling of broken PDB files and non-standard filenames
* Improved error handling

### 1.2.1
* __Mapping of canonical atom order to PDB atom order for each ligand__
* __Introduction of debug mode (--debug)__
* More robust visualization
* Handling of negative residue numbers for more cases
* Composite members in alphabetical order
* Fixes errors in aromatic ring detection
* Code improvements

### 1.2.0
* __Support for DNA and RNA as ligands__
* __Detection of metal complexes with proteins/ligands, including prediction of geometry__
* __Extended result files with detailed information on binding site residues and unpaired atoms__
*__Support for zipped and gzipped files__
* Rich verbose mode in command line with information on detected functional groups and interactions
* Automatic fixing of common errors in custom PDB files
* Refined binding site selection
* Better overall performance
* Initial test suite for metal coordination
* Classification of ligands
* Improves detection of aromatic rings and interactions involving aromatic rings
* Single nucleotides and ions not excluded anymore as ligands
* Generation of canonical smiles for complete (composite) ligands
* Generation of txt files is now optional
* Basic support for PDBQT files
* Correct handling of negative chain positions of ligands
* Improved check for valid PDB IDs
* Fixes several bugs



### 1.1.1
* __Detailed information on binding site residues in XML files__