@@ -200,7 +200,7 @@ class LigandFinder:
         members = [(res.GetName(), res.GetChain(), int32_to_negative(res.GetNum())) for res in kmer]
         members = sorted(members, key=lambda x: (x[1], x[2]))
         rname, rchain, rnum = members[0]
-        debuglog("Finalizing extraction for ligand %s:%s:%s" % (rname, rchain, rnum))
+        write_message("Finalizing extraction for ligand %s:%s:%s\n" % (rname, rchain, rnum), mtype='debug')
         names = [x[0] for x in members]
         longname = '-'.join([x[0] for x in members])
 
@@ -287,7 +287,7 @@ class LigandFinder:
         water = [o for o in pybel.ob.OBResidueIter(self.proteincomplex.OBMol) if o.GetResidueProperty(9)]
         # Filter out non-ligands
         candidates2 = [a for a in candidates1 if is_lig(a.GetName()) and a.GetName() not in self.modresidues]
-        debuglog("%i ligand(s) after first filtering step." % len(candidates2))
+        write_message("%i ligand(s) after first filtering step.\n" % len(candidates2), mtype='debug')
 
         ############################################
         # Filtering by counting and artifacts list #
@@ -542,7 +542,7 @@ class PLInteraction:
         self.interacting_res = list(set([''.join([str(i.resnr), str(i.reschain)]) for i in self.all_itypes
                                          if i.restype not in ['LIG', 'HOH']]))
         if len(self.interacting_res) != 0:
-            message('Ligand interacts with %i binding site residue(s) in chain(s) %s.\n'
+            write_message('Ligand interacts with %i binding site residue(s) in chain(s) %s.\n'
                     % (len(self.interacting_res), '/'.join(self.interacting_chains)), indent=True)
             interactions_list = []
             num_saltbridges = len(self.saltbridge_lneg + self.saltbridge_pneg)
@@ -564,9 +564,9 @@ class PLInteraction:
             if num_waterbridges != 0:
                 interactions_list.append('%i water bridge(s)' % num_waterbridges)
             if not len(interactions_list) == 0:
-                message('Complex uses %s.\n' % ', '.join(interactions_list), indent=True)
+                write_message('Complex uses %s.\n' % ', '.join(interactions_list), indent=True)
         else:
-            message('No interactions for this ligand.\n', indent=True)
+            write_message('No interactions for this ligand.\n', indent=True)
 
     def find_unpaired_ligand(self):
         """Identify unpaired functional in groups in ligands, involving H-Bond donors, acceptors, halogen bond donors.
@@ -659,7 +659,7 @@ class PLInteraction:
                 hydroph_final.append(min_h)
         before, reduced = len(all_h), len(hydroph_final)
         if not before == 0 and not before == reduced:
-            message('Reduced number of hydrophobic contacts from %i to %i.\n' % (before, reduced), indent=True)
+            write_message('Reduced number of hydrophobic contacts from %i to %i.\n' % (before, reduced), indent=True)
         return hydroph_final
 
     def refine_hbonds_ldon(self, all_hbonds, salt_lneg, salt_pneg):
@@ -885,7 +885,7 @@ class Ligand(Mol):
         if not len(self.smiles) == 0:
             self.smiles = self.smiles.split()[0]
         else:
-            message('[Warning] Could not write SMILES for this ligand.\n', indent=True)
+            write_message('Could not write SMILES for this ligand.\n', indent=True, mtype='warning')
             self.smiles = ''
         self.heavy_atoms = self.molecule.OBMol.NumHvyAtoms()  # Heavy atoms count
         self.all_atoms = self.molecule.atoms
@@ -895,7 +895,7 @@ class Ligand(Mol):
         self.hbond_acc_atoms = self.find_hba(self.all_atoms)
         self.num_rings = len(self.rings)
         if self.num_rings != 0:
-            message('Contains %i aromatic ring(s).\n' % self.num_rings, indent=True)
+            write_message('Contains %i aromatic ring(s).\n' % self.num_rings, indent=True)
         descvalues = self.molecule.calcdesc()
         self.molweight, self.logp = float(descvalues['MW']), float(descvalues['logP'])
         self.num_rot_bonds = int(self.molecule.OBMol.NumRotors())
@@ -1003,7 +1003,7 @@ class Ligand(Mol):
                 c_orig_idx = [self.Mapper.mapid(na.GetIdx(), mtype=self.mtype, bsid=self.bsid) for na in n_atoms]
                 a_set.append(data(x=a, x_orig_idx=x_orig_idx, c=pybel.Atom(n_atoms[0]), c_orig_idx=c_orig_idx))
         if len(a_set) != 0:
-            message('Ligand contains %i halogen atom(s).\n' % len(a_set), indent=True)
+            write_message('Ligand contains %i halogen atom(s).\n' % len(a_set), indent=True)
         return a_set
 
     def find_charged(self, all_atoms):
@@ -1173,7 +1173,7 @@ class PDBComplex:
         self.corrected_pdb = pdbparser.corrected_pdb
 
         if pdbparser.num_fixed_lines > 0:
-            message('%i lines automatically fixed in PDB input file.\n' % pdbparser.num_fixed_lines)
+            write_message('%i lines automatically fixed in PDB input file.\n' % pdbparser.num_fixed_lines)
             # Save modified PDB file
             basename = os.path.basename(pdbpath).split('.')[0]
             pdbpath_fixed = tmpfile(prefix='plipfixed.' + basename + '_', direc=self.output_path)
@@ -1186,7 +1186,7 @@ class PDBComplex:
 
         self.sourcefiles['filename'] = os.path.basename(self.sourcefiles['pdbcomplex'])
         self.protcomplex, self.filetype = read_pdb(self.sourcefiles['pdbcomplex'])
-        message('PDB structure successfully read.\n')
+        write_message('PDB structure successfully read.\n')
 
         # Determine (temporary) PyMOL Name from Filename
         self.pymol_name = pdbpath.split('/')[-1].split('.')[0] + '-Protein'
@@ -1197,7 +1197,7 @@ class PDBComplex:
             potential_name = self.protcomplex.data['HEADER'][56:60].lower()
             if extract_pdbid(potential_name) != 'UnknownProtein':
                 self.pymol_name = potential_name
-        debuglog("Pymol Name set as: '%s'" % self.pymol_name)
+        write_message("Pymol Name set as: '%s'\n" % self.pymol_name, mtype='debug')
 
         self.protcomplex.OBMol.AddPolarHydrogens()
         for atm in self.protcomplex:
@@ -1209,17 +1209,17 @@ class PDBComplex:
         self.excluded = ligandfinder.excluded
 
         if len(self.excluded) != 0:
-            message("Excluded molecules as ligands: %s\n" % ','.join([lig for lig in self.excluded]))
+            write_message("Excluded molecules as ligands: %s\n" % ','.join([lig for lig in self.excluded]))
 
         self.resis = [obres for obres in pybel.ob.OBResidueIter(self.protcomplex.OBMol) if obres.GetResidueProperty(0)]
 
         num_ligs = len(self.ligands)
         if num_ligs == 1:
-            message("Analyzing one ligand...\n")
+            write_message("Analyzing one ligand...\n")
         elif num_ligs > 1:
-            message("Analyzing %i ligands...\n" % num_ligs)
+            write_message("Analyzing %i ligands...\n" % num_ligs)
         else:
-            message("Structure contains no ligands.\n\n")
+            write_message("Structure contains no ligands.\n\n")
 
     def characterize_complex(self, ligand):
         """Handles all basic functions for characterizing the interactions for one ligand"""
@@ -1233,11 +1233,11 @@ class PDBComplex:
         ligtype = 'Unspecified type' if ligand.type == 'UNSPECIFIED' else ligand.type
         ligtext = "\n%s [%s] -- %s" % (longname, ligtype, site)
         any_in_biolip = len(set([x[0] for x in ligand.members]).intersection(config.biolip_list)) != 0
-        message(ligtext)
-        message('\n' + '-' * len(ligtext) + '\n')
+        write_message(ligtext)
+        write_message('\n' + '-' * len(ligtext) + '\n')
 
         if ligtype not in ['POLYMER', 'DNA', 'ION', 'DNA+ION', 'RNA+ION', 'SMALLMOLECULE+ION'] and any_in_biolip:
-            message('  -> may be biologically irrelevant <-\n')
+            write_message('may be biologically irrelevant\n', mtype='info', indent=True)
 
         lig_obj = Ligand(self, ligand)
         cutoff = lig_obj.max_dist_to_center + config.BS_DIST
@@ -1262,7 +1262,7 @@ class PDBComplex:
                 if distance <= config.BS_DIST and r not in bs_atoms_refined:
                     bs_atoms_refined.append(r)
         num_bs_atoms = len(bs_atoms_refined)
-        message('Binding site atoms in vicinity (%.1f A max. dist: %i).\n' % (config.BS_DIST, num_bs_atoms),
+        write_message('Binding site atoms in vicinity (%.1f A max. dist: %i).\n' % (config.BS_DIST, num_bs_atoms),
                 indent=True)
 
         bs_obj = BindingSite(bs_atoms_refined, self.protcomplex, self, self.altconf, min_dist, self.Mapper)
