@@ -2,6 +2,7 @@ Changelog
 ---------
 ### 1.3.1
 * __Support for amino acids as ligands__
+* Improved verbose and debug log system
 * Bugfixes for problems affecting some structures with aromatic rings
 
 ### 1.3.0
